# game_engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  architecture.drawio  build.bat  game_engine.sln  post_build.bat  premake5.lua
engine/: CMakeLists.txt
engine/src/: eg_pch.cpp  eg_pch.h  engine.h
engine/src/engine/: application.cpp  application.h  core.h  entryPoint.h  layer.cpp  layer.h  layerStack.cpp  layerStack.h  log.cpp  log.h  window.h
engine/src/engine/event/: applicationEvent.h  event.h  keyEvent.h  mouseEvent.h
engine/src/engine/platform/: window_Windows.cpp  window_Windows.h
game_engine/: game_engine.vcxproj  game_engine.vcxproj.filters
game_engine/src/: engine.h
game_engine/src/engine/: application.cpp  application.h  core.h  entryPoint.h
sandbox/: CMakeLists.txt  sandbox.vcxproj  sandbox.vcxproj.filters
sandbox/src/: sendboxApp.cpp
